javascript functionality mvp finsihed, working

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <form action="">
                 <label for="body">Select</label>
                 <select name="body" id="body">
-                    <option selected disabled>Body</option>
+                    <option selected="selected" disabled>Body</option>
                     <option value="Earth">Earth</option>
                     <option value="Moon">Moon</option>
                     <option value="Merc">Mercury</option>
