min date functionality working

--- a/index.html
+++ b/index.html
@@ -38,11 +38,18 @@
                         <option value="Neptn">Neptune</option>
                     </select>
 
-                    <label for="date">date:</label>
-                    <input type="date" name="date" id="date">
-                    </div>
-                    <input type="submit" class="submitButton" value="enter">
-                    <!-- end of inputFlex  -->
+                    <!-- start of datesSearchFlex -->
+                    <div class="datesSearchFlex">
+
+                        <label for="min-date">Search Past Dates:</label>
+                        <input type="date" name="min-date" id="min-date">
+
+                        <label for="date">Search Future Dates:</label>
+                        <input type="date" name="max-date" id="max-date">
+
+                        <input type="submit" class="submitButton" value="enter">
+                        
+                    <!-- end of datesSearchFlex -->
                     </div>
 
                 </form>
