adding value to planet in form for date search function

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="wrapper">
             <div class="headerTextbox">
                 <h1>Comet Tracker</h1>
-                <h2>Track comets around our Solar System</h2>
+                <h2>Tracking astroid and comet close approaches in our Solar System</h2>
             </div>
         </div>
     </header>
@@ -24,16 +24,13 @@
     <main>
         <!-- wrapper start -->
         <div class="wrapper fieldsetFlex">
-            <div class="welcome">
-                <p>Welcome to comet tracker!  Select a planet and see cloest 3 objects that have pasted by from today up that 60 days from now</p>
-            </div>
 
             <!-- body search starts  -->
             <div class="bodySearch">
                 <fieldset>
-                    <label for="body">Select</label>
+                    <label for="body">Select a Planet/Moon</label>
                     <select name="body" id="body">
-                        <option selected="selected" disabled>Planet</option>
+                        <option selected="selected" disabled value="planet">Planet</option>
                         <option value="Earth">Earth</option>
                         <option value="Moon">Moon</option>
                         <option value="Merc">Mercury</option>
@@ -45,6 +42,7 @@
                         <option value="Neptn">Neptune</option>
                     </select>
                 </fieldset>
+
                 <div class="closestObjFlex">
                     <!-- objects will be added dynamically here -->
                 </div>
