--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="planetSearchFlex">
                 <div class="planetSearchTextBox">
                     <h3>step one: planet/satalite search</h3>
-                    <p>here you can select a planet or moon and see threee current close approaches expected between now and the next 60 days</p>
+                    <p>select a planet/moon and see three close approaches between now and the next 60 days</p>
                 </div>
                 <fieldset>
                     <label for="body">Select a Planet/Moon</label>
@@ -47,8 +47,11 @@
                     </select>
                 </fieldset>
 
-                <div class="closestObjFlex">
-                    <!-- objects will be added dynamically here -->
+                <div class="closestObjects">
+                    <div class="closestObjFlex">
+
+                        <!-- objects will be added dynamically here -->
+                    </div>
                 </div>
 
             <!-- planetSearch ends  -->
