format layout changes

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Odibee+Sans|Roboto:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/style.css">
+    <script src="https://kit.fontawesome.com/21907e9303.js"></script>
 
     <title>Comet Tracker</title>
 </head>
@@ -28,8 +29,7 @@
             <!-- body search starts  -->
             <div class="planetSearchFlex">
                 <div class="planetSearchTextBox">
-                    <h3>step one: planet/satellite search</h3>
-                    <p>select a planet/moon and see three close approaches between now and the next 60 days</p>
+                    <h3><i class="fas fa-search"></i> planet/satellite search</h3>
                 </div>
                 <fieldset>
                     <label for="body">Select a Planet/Moon</label>
