--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./assets/Artist_s_impression_of_comet_9P_Tempel_1_pillars.jpg" type="image/gif" sizes="16x16">
     <link href="https://fonts.googleapis.com/css?family=Odibee+Sans|Roboto:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/style.css">
     <script src="https://kit.fontawesome.com/21907e9303.js"></script>
