--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="wrapper">
             <div class="headerTextbox">
                 <h1>Comet Tracker</h1>
-                <h2>Tracking astroid and comet close approaches in our Solar System</h2>
+                <h2>Tracking asteroid and comet close approaches in our Solar System</h2>
             </div>
         </div>
     </header>
@@ -32,6 +32,7 @@
                 <div class="planetSearchTextBox">
                     <h3><i class="fas fa-search"></i> planet/satellite</h3>
                 </div>
+                <!-- fieldset containing planet/moon selection dropdown menu -->
                 <fieldset>
                     <label for="body">select a planet/moon</label>
                     <select name="body" id="body">
@@ -50,11 +51,9 @@
 
                 <div class="closestObjects">
                     <div class="closestObjFlex">
-
                         <!-- objects will be added dynamically here -->
                     </div>
                 </div>
-
             <!-- planetSearch ends  -->
             </div>
         
@@ -63,16 +62,16 @@
                 <div class="dateSearchTextBox">
                     <h3><i class="fas fa-search"></i> past/future close approaches</h3>
                 </div>
+                <!-- fieldset containing dates input and celestial objects dropdown menu -->
                 <fieldset>
                     <form class = "datesSearch" action="">
-                        <label for="min-date">past</label>
-                        
-                        <label for="date">future</label>
-                        <input type="date" name="min-date" id="min-date">
-                        <input type="date" name="max-date" id="max-date">
+                        <label for="min-date">past<span class="sr-only">default is 60 days from today</span></label>
+                        <label for="max-date">future<span class="sr-only">default is 60 days from today</span></label>
+                        <input type="date" name="min-date" id="min-date" title="default is today">
+                        <input type="date" name="max-date" id="max-date" title="default is 60 days from today">
                         <select name="spaceObject" id="spaceObject">
                             <option selected="selected" disabled value="spaceObjectDefault">celestial object</option>
-                            <option value="a">asteriod</option>
+                            <option value="a">asteroid</option>
                             <option value="c">comets</option>
                             <option value="n">misc objects</option>
                         </select>
