--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
                 <!-- fieldset containing dates input and celestial objects dropdown menu -->
                 <fieldset>
                     <form class="datesSearch" action="">
-                        <label for="minDate">Start date<span class="sr-only">default is today</span></label>
-                        <label for="maxDate">End date<span class="sr-only">default is 60 days from today</span></label>
-                        <input type="date" name="minDate" id="minDate" required title="default is today">
-                        <input type="date" name="maxDate" id="maxDate" required title="default is 60 days from today">
+                        <label for="minDate">Start date</label>
+                        <label for="maxDate">End date</label>
+                        <input type="date" name="minDate" id="minDate" required>
+                        <input type="date" name="maxDate" id="maxDate" required>
                         <select name="spaceObject" id="spaceObject">
                             <option selected="selected" disabled value="spaceObjectDefault">celestial object</option>
                             <option value="a">asteroid</option>
